package dev.atajan.signupform.common

const val LOADING_INDICATOR = "tag_loading"
const val HEADER_TEXT = "tag_header_text"
const val USER_DETAIL_NAME = "tag_user_detail_name"
const val USER_DETAIL_EMAIL = "tag_user_detail_email"
const val USER_DETAIL_WEBSITE = "tag_user_detail_website"
const val PROGRESS_BUTTON = "tag_progress_button"
const val ERROR_TEXT = "tag_error_text"
const val NAME_FIELD = "tag_name_field"
const val EMAIL_FIELD = "tag_email_field"
const val PASSWORD_FIELD = "tag_password_field"
const val WEBSITE_FIELD = "tag_website_field"